# icub-demos

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/HeadTurn/: CMakeLists.txt
app/HeadTurn/scripts/: HeadTurn.xml.template
app/RedBallDemo/: CMakeLists.txt
app/RedBallDemo/scripts/: RedBallDemo.xml.template
src/: CMakeLists.txt
src/AngleDemo/: demo.py
src/ButterDemo/: CMakeLists.txt
src/ButterDemo/src/: butterworth.cpp  main.cpp
src/FilterDemo/: CMakeLists.txt  filterDemo.py  hilbertTransformDemo.py  main.cpp
src/HeadTurn/: CMakeLists.txt
src/HeadTurn/include/iCub/: headTurnModule.h  headTurnRatethread.h
src/HeadTurn/src/: headTurnModule.cpp  headTurnRatethread.cpp  main.cpp
src/HilbertDemo/: CMakeLists.txt
src/HilbertDemo/src/: main.cpp
src/RedBallDemo/: CMakeLists.txt
src/RedBallDemo/include/iCub/: redBallDemoModule.h  redBallDemoRatethread.h
src/RedBallDemo/src/: main.cpp  redBallDemoModule.cpp  redBallDemoRatethread.cpp
src/SplineDemo/: CMakeLists.txt  beams_to_angles.py  filter_temp.m  filter_temp.py  interpolationDemo.py  main.cpp
src/tutorialPeriodicThread/: CMakeLists.txt
src/tutorialPeriodicThread/include/iCub/: tutorialModule.h  tutorialPeriodicThread.h
src/tutorialPeriodicThread/src/: main.cpp  tutorialModule.cpp  tutorialPeriodicThread.cpp
