# Copyright: (C) 2015 RBCS Robotics Brain and Cognitive Science
# Authors: Francesco Rea, Austin Kothig
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)
add_subdirectory ( HeadTurn    )
add_subdirectory ( RedBallDemo )
add_subdirectory ( SplineDemo  )
